CSS fix to properly display content on mobile

--- a/projects/static/projects/glassmorphism/glassmorphism.css
+++ b/projects/static/projects/glassmorphism/glassmorphism.css
@@ -229,6 +229,9 @@ p {
 }
 
 .sample-content-container {
+    position: relative;
+    z-index: 1000;
+    
     height: 100%;
 
     overflow-y: scroll;
